@@ -1,5 +1,6 @@
 = 1.8.3 =
 
+* If you have the Educator plugin installed, please update it to the version 1.7 or greater before installing this update.
 * Prepared the theme for the Educator 1.7+.
 
 = 1.8.2 =
